syntax = "proto3";
option java_multiple_files = true;
// Generated from the original proto file and split into multiple files
option java_package = "billing";

service BillingService{
  rpc CreateBillingAccount (BillingRequest) returns (BillingResponse);
}

message BillingRequest {
  string patientId = 1;
  string name = 2;
  string email = 3;
}
// it's like dto

message BillingResponse {
  string accountId = 1;
  string status = 2;
}